Save list of available files in database

--- a/edf/src/main/resources/application.properties
+++ b/edf/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-datasource.path.map=Destination of map of available files for users
-datasource.path=Destination of uploaded files
+storage.path=Destination of uploaded files
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.datasource.url=jdbc:hsqldb:hsql://localhost/simpledb
+spring.datasource.username=SA
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
