--- a/edf/build.gradle
+++ b/edf/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.edf'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '11'
 
 repositories {
@@ -15,10 +15,14 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.5.4'
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
+	implementation 'org.hsqldb:hsqldb:2.6.0'
+	implementation 'junit:junit:4.13.2'
+
+	runtimeOnly 'com.h2database:h2:1.4.200'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
 	testImplementation 'org.springframework.security:spring-security-test:5.5.1'
-	implementation 'com.google.code.gson:gson:2.8.8'
 
 }
 
